# sayvai_sqlagent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
sayvai_sqlagent/: ___init___.py  agent.py
